@@ -1,5 +1,5 @@
 Bundle-ManifestVersion: 2
 Bundle-Name: Simple JSP War
 Bundle-SymbolicName: org.springframework.osgi.iandt.web.simple.jsp.bundle
-Bundle-Classpath: WEB-INF/classes
+Bundle-ClassPath: WEB-INF/classes
 Import-Package: javax.servlet,javax.servlet.http,javax.servlet.resources
