@@ -1,7 +1,7 @@
 Bundle-ManifestVersion: 2
 Bundle-Name: JSP Taglib War
 Bundle-SymbolicName: org.springframework.osgi.iandt.web.taglib.jsp.bundle
-Bundle-Classpath: WEB-INF/classes
+Bundle-ClassPath: WEB-INF/classes
 Import-Package: javax.servlet,javax.servlet.http,javax.servlet.resources
 Require-Bundle: org.springframework.osgi.jstl.osgi
 
