@@ -24,7 +24,6 @@
 	<plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-        <version>2.0</version>
         <configuration>
           <archive>
             <manifestFile>target/classes/META-INF/MANIFEST.MF</manifestFile>
