@@ -144,19 +144,4 @@
 
   </dependencies>
   
-  <build>
-	<plugins>
-	  <plugin>
-         <groupId>org.apache.maven.plugins</groupId>
-         <artifactId>maven-war-plugin</artifactId>
-         <version>2.0</version>
-
-		 <configuration>
-		   <archive>
-			 <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
-		   </archive>
-		 </configuration>
-	  </plugin>
-	</plugins>
-  </build>
 </project>
